src/main/java/com/example/mybank/errors/notFound/ResourceNotFoundException.java
package com.example.mybank.errors.notFound;

public class ResourceNotFoundException extends RuntimeException {

    public ResourceNotFoundException() {
        super("Resource not found");
    }

    public ResourceNotFoundException(String message) {
        super(message);
    }
}
